--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "rest-api",
   "version": "1.0.0",
   "description": "Teste de REST API para tutorial do video youtube",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon serve.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
